--- a/Distributed-Primes-Sieve-Impl/week02/infra/compose.yaml
+++ b/Distributed-Primes-Sieve-Impl/week02/infra/compose.yaml
@@ -1,88 +1,27 @@
 services:
-  dev-env:
+  primary:
     build:
-      context: .
-      dockerfile: Containerfile
-    container_name: venvprimes_dev
+      context: ${PROJECT_ROOT}
+      dockerfile: infra/Containerfile
+    container_name: snake_pit
     volumes:
-      - .:/app:Z
+      - ${PROJECT_ROOT}:/app:Z
     working_dir: /app
     environment:
-      - PIP_BREAK_SYSTEM_PACKAGES=1
-      - PYTHONDONTWRITEBYTECODE=1
+      - PROJECT_ROOT=${PROJECT_ROOT}
     ports:
-      - "8080:8080"
-    stdin_open: true # Equivalent to -i
-    tty: true        # Equivalent to -t
-    command: tail -f /dev/null
-
-services:
-  dev-env-1:
-    build:
-      context: .
-      dockerfile: Containerfile
-    container_name: venvprimes_dev
-    network_mode: "host"
-    deploy:
-      replicas: 3
-    volumes:
-      # - .:/app:Z
-      - ${PWD}:/app:Z
-    working_dir: /app
-    environment:
-      - PIP_BREAK_SYSTEM_PACKAGES=1
-      - PYTHONDONTWRITEBYTECODE=1
-    stdin_open: true # Equivalent to -i
-    tty: true        # Equivalent to -t
+      - "9200:9200" # Primary HTTP
+      - "9201:9201" # Primary gRPC
     command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
 
-
-services:
-  dev-env-2:
+  worker:
     build:
-      context: .
-      dockerfile: Containerfile
-    container_name: venvprimes_dev
-    network_mode: "host"
-    deploy:
-      replicas: 3
+      context: ${PROJECT_ROOT}
+      dockerfile: infra/Containerfile
+    # No container_name here so we can scale
     volumes:
-      # - .:/app:Z
-      - ${PWD}:/app:Z
+      - ${PROJECT_ROOT}:/app:Z
     working_dir: /app
-    environment:
-      - PIP_BREAK_SYSTEM_PACKAGES=1
-      - PYTHONDONTWRITEBYTECODE=1
-    stdin_open: true # Equivalent to -i
-    tty: true        # Equivalent to -t
+    depends_on:
+      - primary
     command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
-
-services:
-  dev-env-3:
-    build:
-      context: .
-      dockerfile: Containerfile
-    container_name: venvprimes_dev
-    network_mode: "host"
-    deploy:
-      replicas: 3
-    volumes:
-      # - .:/app:Z
-      - ${PWD}:/app:Z
-    working_dir: /app
-    environment:
-      - PIP_BREAK_SYSTEM_PACKAGES=1
-      - PYTHONDONTWRITEBYTECODE=1
-    stdin_open: true # Equivalent to -i
-    tty: true        # Equivalent to -t
-    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
-
-# services:
-#   workers-1:
-#   image: localhost/infra_dev:latest
-#   network_mode: "host"
-#     deploy:
-#       replicas: 3
-#     stdin_open: true # Equivalent to -i
-#     tty: true        # Equivalent to -t
-#     command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
