--- a/Distributed-Primes-Sieve-Impl/week02/infra/Containerfile
+++ b/Distributed-Primes-Sieve-Impl/week02/infra/Containerfile
@@ -18,5 +18,7 @@ ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ENV DISPLAY=${DISPLAY}
 ENV LANG=en_US.UTF-8
 
+ENV IS_BOOTSTRAPPED=1
+
 EXPOSE 8080
 # ENTRYPOINT ["/bin/sh"]
